load("@rules_python//python:defs.bzl", "py_binary")

package(
    default_visibility = ["//visibility:public"],
)

HDRS = glob(["*.h"])

cc_binary(
    name = "calcc",
    srcs = [
        "Compiler.cpp",
    ] + HDRS,
    copts = ["-Icalcllvm/lib"],
    deps = [
        "//calcllvm/lib:libcalcllvm",
    ],
)

cc_binary(
    name = "calci",
    srcs = [
        "Interpreter.cpp",
    ] + HDRS,
    copts = ["-Icalcllvm/lib"],
    deps = [
        "//calcllvm/lib:libcalcllvm",
    ],
)

py_binary(
    name = "calcc_driver",
    srcs = ["compiler_driver.py"],
    data = [
        ":calcc",
        "//calcllvm/runtime:runtime.c",
        "@llvm-project//clang:clang",
        "@llvm-project//llvm:llc",
    ],
    main = "compiler_driver.py",
)
